Add Page PlayersAdd

--- a/src/common/components/ui/pagination/_media.scss
+++ b/src/common/components/ui/pagination/_media.scss
@@ -54,6 +54,7 @@
     .pagination
     {
         // padding: 0 15px 0 12px;
+        padding: 0 10px;
         #display
         {
             display: none;
@@ -83,6 +84,7 @@
 {
     .pagination
     {
+        padding: 0;
         margin-bottom: 16px;
         &__button
         {
