--- a/src/common/components/ui/burger/MenuBurger.scss
+++ b/src/common/components/ui/burger/MenuBurger.scss
@@ -8,10 +8,12 @@
     top: 20px;
     .bar 
     {
-        width: 30px;
+        width: 24px;
         height: 3px;
-        background-color: #333;
-        margin: 4px 0;
+        background-color: #0000008A;
+        margin: 2.5px 0;
         transition: 0.4s;
+        border-radius: 2px;
     }
 }
+@import 'media'
