--- a/src/common/components/ui/search/_media.scss
+++ b/src/common/components/ui/search/_media.scss
@@ -1,3 +1,39 @@
+@media(max-width: 1438px)
+{
+    .search
+    {
+        &__form
+        {
+            width: 304px;
+        }
+    }
+}
+@media(max-width: 992px)
+{
+    .search
+    {
+        &__form
+        {
+            width: 300px;
+        }
+    }
+}
+@media(max-width: 768px)
+{
+    .search
+    {
+        flex-direction: column;
+        &__form
+        {
+            width: 100%;
+        }
+        &__btn
+        {
+            margin-top: 16px;
+            width: 100%;
+        }
+    }
+}
 @media(max-width: 576px)
 {
     .search
@@ -16,6 +52,7 @@
 {
     .search
     {
+        padding: 0;
         margin: 16px 0;
         flex-direction: column;
 
