--- a/src/common/components/ui/button/Button.scss
+++ b/src/common/components/ui/button/Button.scss
@@ -1,18 +1,83 @@
 .default
 {
-    width: 365px;
+    // width: 365px;
+    width: 100%;
     height: 40px;
     padding: 8px 0px;
     font-size: 16px;
-    color: var(--ui-white, #FFF);
+    color:  #FFF;
     font-weight: 500;
     border-radius: 4px;
     border: none;
-    background: var(--ui-red, #E4163A);
-    margin: 24px 0 24px 0;
+    background:  #E4163A;
+    // margin: 24px 0 24px 0;
+    &:hover
+    {
+        background: #FF5761;
+    }
 
 }
-.secondary
+.Cancel
 {
-    background-color: blue;
+    width: 171px;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid #9C9C9C;      
+    color: #9C9C9C;
+    font-size: 15px;
+    font-weight: 500;
+    margin-right: 24px;
+    &:hover
+    {
+        background:#D1D1D1;
+    }
+    &:active
+    {   
+        border: 1px solid #707070;
+        background: #9C9C9C;
+        color: #707070;
+    }
+}
+.Save
+{
+    width: 171px;
+    height: 40px;
+    border-radius: 4px;
+    background:  #E4163A;
+    border: none;
+    color: #FFF;
+    font-size: 15px;
+    font-weight: 500;
+    &:hover
+    {
+        background: #FF5761;
+    }
+    &:active
+    {
+        background: #C60E2E;
+    }
+
+}
+.Add
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+    min-width: 104px;
+    height: 40px;
+    border: none;
+    font-size: 15px;
+    color: #FFF;
+    font-weight: 500;
+    border-radius: 4px;
+    background: #E4163A;
+    &:hover
+    {
+        background: #FF5761;
+    }
+    &:active
+    {
+        background: #C60E2E;
+    }
 }
