--- a/src/common/components/ui/menuburger/_media.scss
+++ b/src/common/components/ui/menuburger/_media.scss
@@ -1,7 +1,68 @@
+@media(max-width: 1920px)
+{
+    .menu__profile
+    {
+        display: none;
+    }
+}
 @media(max-width: 1200px)
 {
     .menu
     {
         display: none;
+    }
+}
+@media(max-width: 768px)
+{
+    .menu
+    {
+        &__title
+        {
+            font-size: 13px;
+        }
+        &__profile
+        {
+            display: flex;
+        }
+        &__teams
+        {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            margin-top: 24px;
+            height: 24px;
+            width: 100%;
+            padding-left: 20px;
+            svg
+            {
+                margin-right: 8px;
+            }
+        }
+        &__playears
+        {
+            display: flex;
+            align-items: center;
+            width: 100%;
+            height: 24px;
+            margin-top: 24px;
+            padding-left: 20px;
+            svg 
+            {
+                margin-right: 8px;
+            }
+        }
+        &__signOut
+        {
+            display: flex;
+            align-items: center;
+            width: 100%;
+            height: 24px;
+            padding-left: 20px;
+            
+            svg
+            {
+                margin-right: 8px;
+            }
+        }
     }
 }
