--- a/src/common/components/ui/menuburger/leftBlovkMenu.scss
+++ b/src/common/components/ui/menuburger/leftBlovkMenu.scss
@@ -18,6 +18,30 @@ body
         display: flex;
         align-items: center;
         flex-direction: column;
+        width: 100%;
+    }
+    &__profile
+    {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        hr 
+        {
+            margin-top: 16px;
+            width: 100%;
+        }
+        p 
+        {
+            margin-left: 8px;
+        }
+    }
+    &__user
+    {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: flex-end;
+        align-items: center;
+        padding-left: 16px;
     }
     &__teams
     {
@@ -31,7 +55,6 @@ body
         height: 46px;
         width: 40px;
         margin-top: 36px;
-
     }
     &__signOut
     {
@@ -63,11 +86,11 @@ body
         display: flex;
         position: absolute;
         height: 100%;
+        width: 201px;
     }
 }
 .overlay
 {
-    // height: 100dvh;
     &.visible
     {
         top: 0;
