--- a/src/modules/players/components/PlayersAdd/PlayersAdd.scss
+++ b/src/modules/players/components/PlayersAdd/PlayersAdd.scss
@@ -98,15 +98,10 @@
         background: #9C9C9C;
         width: 336px;
         height: 261px;
-        // margin-right: 136px;
     }
 }
 .form 
 {
-    &__wrapper 
-    {
-        width: 366px;
-    }
     &__group 
     {
         position: relative;
@@ -114,49 +109,7 @@
         display: flex;
         align-items: center;
     }
-    &__label 
-    {
-        position: absolute;
-        top: 0px;
-        text-align: left;
-        color: #707070;
-        font-size: 14px;
-        font-weight: 500;
-        height: 18px;
-    }
-    &__input 
-    {
-        // width: 366px;
-        width: 100%;
-        height: 40px;
-        border-radius: 4px;   
-        background:  #F6F6F6;
-        border: none;
-        padding: 0;        
-    }
 
-    &__cancel
-    {
-        width: 171px;
-        height: 40px;
-        border-radius: 4px;
-        border: 1px solid #9C9C9C;      
-        color: #9C9C9C;
-        font-size: 15px;
-        font-weight: 500;
-        margin-right: 24px;
-    }
-    &__save 
-    {
-        width: 171px;
-        height: 40px;
-        border-radius: 4px;
-        background:  #E4163A;
-        border: none;
-        color: #FFF;
-        font-size: 15px;
-        font-weight: 500;
-    }
     &__row1
     {
         display: flex;
@@ -168,6 +121,18 @@
         display: flex;
         justify-content: space-between;
         width: 100%;
+    }
+    &__height, &__weight, &__birthday, &__number
+    {
+        flex: 0 0 calc(50% - 12px);
+        img 
+        {
+            position: absolute;
+            left: 143px;
+            top: 36px;
+            cursor: pointer;
+        }
+    
     }
 }
 @import 'media'
