--- a/src/modules/registration/signUp/signUp.scss
+++ b/src/modules/registration/signUp/signUp.scss
@@ -1,4 +1,4 @@
-.container
+.container-sign
 {
     width: 1440px;
     margin: 0 auto;
@@ -6,15 +6,19 @@
     align-items: center;
     height: 100vh;
 }
+.wrapper
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
 .form
 {
     &__wrapper
     {
         width: 366px;   
-    }
-    &__block
-    {
-        padding: 0 120px;
     }
     &__title
     {
@@ -27,55 +31,79 @@
     &__group
     {
         position: relative;
+        height: 92px;
+        display: flex;
+        align-items: center;
         svg
         {
             display: flex;
             position: absolute;
-            top: 20px;
-            right: 10px;
+            top: 38px;
+            right: 12px;
         }
     }
-    &__label
-    {
-        position: absolute;
-        top: -20%;
-        text-align: left;
-        color: #707070;
-        line-height: 18px;
-    }
-    &__input
-    {
-        width: 365px;
-        height: 40px;
-        border-radius: 4px;
-        background: #F6F6F6;
-        border: none;
-        padding: 0;
-        margin-top: 8px;
-        margin-bottom: 44px;
-        &-nomargin
-        {
-            @extend .form__input;
 
-            margin: 0;
-        }
-    }
-    &__button
+    &__checkbox
     {
-        font-family: 'Avenir';
-        width: 365px;
-        height: 40px;
-        padding: 8px 0;
-        font-size: 16px;
-        color: #FFF;
-        font-weight: 500;
-        border-radius: 4px;
-        border: none;
-        background: #E4163A;
+        display: flex;
+        position: relative;
         margin-bottom: 24px;
+        height: 24px;
+    }
+    &__input-checkbox
+    {
+        -webkit-appearance: none;
+        appearance: none;
+        position: absolute;
+    }
+    &__label-checkbox
+    {
+        padding-left: 34px;
+        display: flex;
+        align-items: center;
+    }
+    &__label-checkbox::before
+    {
+        content: '';
+        display: block;
+        width: 16px;
+        height: 16px;
+        border: 2px solid #9C9C9C;
+        border-radius: 4px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+    }
+    &__label-checkbox::after
+    {
+        content: '';
+        display: block;
+        width: 16px;
+        height: 16px;
+        text-align: center;
+
+        background: url(../../../assets/icon/icons8-check.svg) no-repeat;
+        background-size: 16px 16px;
+        opacity: 0;
+        position: absolute;
+        top: 2px;
+        left: 2px;
+        z-index: 2;
+    }
+    &__input-checkbox:checked + &__label-checkbox::before
+    {
+        background: #E4163A;
+        border-color: #E4163A;
+    }
+    &__input-checkbox:checked + &__label-checkbox::after
+    {
+        opacity: 1;
+        color: #FFF;
     }
     &__link
     {
+        margin-top: 24px;
         font-weight: 500;
         color: #707070;
         font-size: 14px;
@@ -91,7 +119,6 @@
         display: flex;
         align-self: normal;
         background: #F5FBFF;
-        padding: 0 87px;
     }
     &__img
     {
