--- a/src/common/components/ui/search/Search.scss
+++ b/src/common/components/ui/search/Search.scss
@@ -1,5 +1,9 @@
 .search
 {
+    a 
+    {
+        text-decoration: none;
+    }
     margin: 32px 0;
     display: flex;
     justify-content: space-between;
