--- a/src/modules/authorization/signIn/_media.scss
+++ b/src/modules/authorization/signIn/_media.scss
@@ -100,7 +100,7 @@
     {
         width: 100%;
         padding: 0 10px;
-        max-height: 623px;
+        // max-height: 623px;
     }
     .form 
     {
