--- a/src/common/components/ui/input/Input.scss
+++ b/src/common/components/ui/input/Input.scss
@@ -1,4 +1,4 @@
-input:not([type="checkbox"])
+input:not( [type="checkbox"], [type="search"] )
 {
     width: 100%;
     height: 40px;
@@ -17,4 +17,8 @@ input:not([type="checkbox"])
         box-shadow: 0px 0px 5px 0px #D9D9D9;
 
     }
+}
+.custom-select__input
+{
+    height: 0 !important;
 }
