--- a/src/modules/teams/components/TeamAdd/_media.scss
+++ b/src/modules/teams/components/TeamAdd/_media.scss
@@ -8,6 +8,19 @@
             justify-content: space-around;
         }
     }
+    .form
+    {
+        &__wrapper
+        {
+            padding: 0;
+        }
+        &__button
+        {
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+        }
+    }
 }
 @media (max-width: 992px)
 {
