Change hover element LeftMenu

--- a/src/common/components/ui/button/Button.scss
+++ b/src/common/components/ui/button/Button.scss
@@ -72,6 +72,7 @@
     font-weight: 500;
     border-radius: 4px;
     background: #E4163A;
+    cursor: pointer;
     &:hover
     {
         background: #FF5761;
