--- a/src/common/components/ui/input/Input.scss
+++ b/src/common/components/ui/input/Input.scss
@@ -1,4 +1,4 @@
-input:not( [type="checkbox"], [type="search"] )
+input:not( [type="checkbox"], [type="search"], [type="file"] )
 {
     width: 100%;
     height: 40px;
@@ -21,4 +21,8 @@ input:not( [type="checkbox"], [type="search"] )
 .custom-select__input
 {
     height: 0 !important;
+}
+#fileInput
+{
+    display: none;
 }
