--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,5 +1,6 @@
 // @import url('https://webfonts.brand.ucsb.edu/webfont.min.css');
 @import url('https://db.onlinewebfonts.com/c/0983e84d4a1963e075b5ae8ca12e2a4f?family=Avenir+Medium');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&display=swap');
 
 .container
 {
