--- a/src/modules/players/components/PlayersCard/PlayersCards.scss
+++ b/src/modules/players/components/PlayersCard/PlayersCards.scss
@@ -37,6 +37,14 @@
         display: flex;
         justify-content: center;
         align-items: end;
+        img 
+        {
+            max-width: 274px;
+            max-height: 207px;
+            object-fit: contain;
+            width: auto;
+            height: auto;
+        }
     }
     &__text
     {
@@ -45,7 +53,29 @@
         background: var(--ui-dark-grey, #303030);
         padding: 24px 0 24px 0;
         text-align: center;
+
+    }
+    &__name
+    {
+        font-size: 18px;
+        font-weight: 600;
         color: #FFFFFF;
+        font-family: 'Montserrat', sans-serif;
+        span
+        {
+            color: #FF5761;
+            font-size: 18px;
+            font-weight: 600;
+            font-family: 'Montserrat', sans-serif;
+        }
+    }
+    &__team
+    {
+        font-size: 14px;
+        color: #9C9C9C;
+        font-weight: 500;
+        line-height: 24px;
+        margin-top: 12px;
     }
 }
 
