add Filters card, add Paginate

--- a/src/common/components/ui/MultiSelect/_media.scss
+++ b/src/common/components/ui/MultiSelect/_media.scss
@@ -52,6 +52,7 @@
      .search__select .css-b62m3t-container
      {
         margin-left: 0 !important;
-        position: static !important;
+        position: sticky !important;
      } 
+
 }
