add roster, change visible password input

--- a/src/modules/players/components/PlayersAdd/PlayersAdd.scss
+++ b/src/modules/players/components/PlayersAdd/PlayersAdd.scss
@@ -68,6 +68,16 @@
     {
         cursor: pointer !important;
         padding-right: 12px !important;
+        position: relative !important;
+    }
+    &__clear-indicator
+    {
+        position: relative !important;
+
+        svg 
+        {
+            top: 0 !important;
+        }
     }
     &__indicator-separator
     {
