--- a/src/modules/players/components/PlayersCard/PlayersCards.scss
+++ b/src/modules/players/components/PlayersCard/PlayersCards.scss
@@ -18,6 +18,10 @@
         list-style: none;
         padding: 0;
         margin: 0;        
+        a 
+        {
+                text-decoration: none;
+        }
     }
     &__item
     {
