--- a/src/modules/players/components/PlayersDetails/PlayersDetails.scss
+++ b/src/modules/players/components/PlayersDetails/PlayersDetails.scss
@@ -53,13 +53,27 @@
         display: flex;
         border-radius: 0px 0px 10px 10px;
         background: linear-gradient(315deg, #707070 0%, #393939 100%);
-        padding-top: 66px;
+        padding-top: 65px;
         padding-right: 144px;
         justify-content: space-between;
     }
     &__img
     {
         display: flex;
+        align-items: end;
+        max-width: 531px;
+        width: 100%;
+        img 
+        {
+            // transform: scale(1.9);
+            width: 100%;
+        }
+    }
+    &__information
+    {
+        padding-bottom: 65px;
+        max-width: 408px;
+        width: 100%;
     }
     &__main-title
     {
