--- a/src/modules/players/components/PlayersDetails/_media.scss
+++ b/src/modules/players/components/PlayersDetails/_media.scss
@@ -21,9 +21,6 @@
 {
     .players
     {
-        // height: 100%;
-        // width: 100%;
-        // overflow: hidden;
         &__wrapper
         {
             padding-right: 44px;
@@ -31,14 +28,10 @@
         &__img 
         {
             align-items: end;
-            img 
-            {
-                // width: 100%;
-                // height: auto;
-                // object-fit: contain;    
-                width: 350px;
-                height: 300px;
-            }
+        }
+        &__information
+        {
+            width: 100%;
         }
         &__main-title
         {
@@ -73,12 +66,16 @@
         {
             flex-direction: column;
             justify-content: center;
+            align-items: center;
+            padding: 48px 0;
+        }
+        &__information
+        {
             padding: 0;
         }
         &__img
         {
-            justify-content: center;
-            align-items: center;
+            max-width: 300px;
         }
         &__main-title
         {
@@ -96,20 +93,6 @@
         }
     }
 }
-@media(max-width: 576px)
-{
-    .players
-    {
-        &__img
-        {
-            img 
-            {
-                width: 300px;
-                height: 250px;
-            }
-        }
-    }
-}
 @media(max-width: 426px)
 {
     .players
@@ -124,6 +107,12 @@
         {
             border-radius: 0;
             padding-bottom: 48px;
+            align-items: center;
+        }
+        &__img 
+        {
+            max-width: 250px;
+            align-items: center;
         }
         &__row1
         {
@@ -166,6 +155,10 @@
 {
     .players
     {
+        &__img 
+        {
+            max-width: 150px;
+        }
         &__main-title
         {
             font-size: 17px;
