--- a/src/modules/registration/signUp/signUp.scss
+++ b/src/modules/registration/signUp/signUp.scss
@@ -34,6 +34,7 @@
             position: absolute;
             top: 38px;
             right: 12px;
+            cursor: pointer;
         }
     }
 
