--- a/src/modules/teams/components/TeamCard/Cards.scss
+++ b/src/modules/teams/components/TeamCard/Cards.scss
@@ -17,7 +17,11 @@
         row-gap: 24px;
         list-style: none;
         padding: 0;
-        margin: 0;        
+        margin: 0;     
+        a 
+        {
+            text-decoration: none;
+        }   
     }
     &__item
     {
@@ -29,7 +33,7 @@
         padding: 0;
         background: linear-gradient(#707070, #393939) ;
         border-radius: 4px;
-
+        cursor: pointer;
     }
     &__wrapper
     {
