--- a/src/modules/teams/components/TeamRoster/_media.scss
+++ b/src/modules/teams/components/TeamRoster/_media.scss
@@ -1,83 +1,92 @@
 @media(max-width: 768px)
 {
-    .roster
+    .roster 
     {
-        .head
+        &__header 
         {
-            &__row
-            {
-                padding: 0;
-                padding-left: 16px;
-            }
-            &__column2
-            {
-                display: none;
-            }
+            padding-left: 16px;
         }
-        .body
+        &__row:nth-child(1)
         {
-            &__row
-            {
-                padding: 0;
-                padding-left: 6px;
-            }
-            &__column2
-            {
-                display: none;
-            }
+            padding-left: 16px;
         }
-    }
-}
-@media (max-width: 426px)
-{
-    .roster
-    {
-        &__header
-        {
-            border-radius: 0;
-        }
-    }
-    .body
-    {
         &__row
         {
-            border-radius: 0;
+            padding-left: 16px;
+        }
+        &__row:nth-child(1) &__column1:nth-child(1)
+        {
+            max-width: 75px;
+        }
+        &__row:nth-child(1) &__column2:nth-child(2) 
+        {
+            max-width: 250px;
+        }
+        &__info
+        {
+            width: 150px;
         }
     }
 }
-@media (max-width: 376px)
+@media(max-width: 576px)
 {
-    .roster
+    .roster 
+    {
+        &__row:nth-child(1) 
+        {
+            padding-right: 16px;
+        }
+        &__row
+        {
+            padding-right: 16px;
+        }
+        // &__column1
+        // {
+        //     justify-content: start;
+        // }
+        // &__info
+        // {
+        //     width: 100%;
+        // }
+        &__row:nth-child(1) &__column2:nth-child(2) 
+        {
+            max-width: 150px;
+        }
+        &__column2 
+        {
+            max-width: 150px;
+        }
+        &__info 
+        {
+            max-width: 125px;
+        }
+    }
+}
+@media(max-width: 426px)
+{
+    .roster 
     {
         &__header
         {
-            span 
-            {
-                font-size: 15px;
-            }
+            border-radius: 0px
         }
-
-        .head
-        {           
-            &__player
-            {
-                font-size: 15px;
-            }           
-        }
-        .body
+        &__row:nth-last-child(-n + 1) 
         {
-            &__number
-            {
-                font-size: 13px;
-            }
-            &__title
-            {
-                font-size: 15px;
-            }
-            &__subtitle
-            {
-                font-size: 13px;
-            }
+            border-radius: 0px
+        }
+    }
+}
+@media(max-width: 376px)
+{
+    .roster 
+    {
+        &__column1
+        {
+            max-width: 215px;
+        }
+        &__column2
+        {
+            display: none;
         }
     }
 }
